Fix: correct padding to video of research page to remove white space on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,7 +149,6 @@ video {
   position: relative;
   display: block;
   width: 100%;
-  height: 80vh;
 }
 
 .float-right {
